fix: support ts

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "share-sheet",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Share Sheet 是一个基于 Vue.js 的用于 Web 打开 APP 客户端的一体化方案，兼容 iOS 与 Android，支持微信开放标签",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yyued/share-sheet.git"
   },
-  "author": "YY.UED",
+  "author": "LiuDawei",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/yyued/share-sheet/issues"
@@ -16,5 +16,6 @@
   "dependencies": {
     "vue": "^2.6.11",
     "yypkg": "^2.0.14"
-  }
+  },
+  "keywords": ["share sheet", "universal link", "URL Schema", "wx-open-launch-app"]
 }
